--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "sid2",
-  "version": "2021.8.1",
+  "version": "2021.8.2",
   "description": "sid2 monorepo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "release-it --npm.skipChecks=true --no-npm.publish"
   },
   "repository": {
     "type": "git",
