fix(build): set preRelease to true for releases in stable

--- a/.release-it.json
+++ b/.release-it.json
@@ -10,11 +10,11 @@
     }
   },
   "git": {
-    "requireCleanWorkingDir": false,
-    "preRelease": true
+    "requireCleanWorkingDir": false
   },
   "github": {
     "release": true,
+    "preRelease": true,
     "assets": [
       "./target/**/**"
     ]
