Revert "#487 - fixes after fasrc upgrade to OOD 2.0.12"

--- a/dashboard/application/config/launchers/matlab.yml
+++ b/dashboard/application/config/launchers/matlab.yml
@@ -13,7 +13,7 @@ form:
   bc_email_on_started: "0"
   custom_reservation: ""
   bc_vnc_resolution: "1024x768"
-  matlab_version: "matlab/R2021a-fasrc01"
+  matlab_version: "/n/singularity_images/OOD/matlab/current/Matlab2020a_standard-xfce-el7-7.6.1810.sif"
 
 view:
   logo: "matlab_logo.png"
