feat(build): build canary releases and migrate version file
We will use a non-mergable VERSION file to track the version of
this monorepo. Version in package.json at the root set to
0.0.0 to prevent merge conflicts. The VERSION file will be managed
by this process. Expect a continuous stream of commits while
kinks are worked out.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   workflow_run:
     workflows: ["build-and-test"]
-    branches: [stable]
+    branches: [canary, stable]
     types:
       - completed
 
