--- a/.release-it.json
+++ b/.release-it.json
@@ -1,5 +1,15 @@
 {
   "plugins": {
+    "@release-it/bumper": {
+      "in": {
+        "file": "VERSION",
+        "type": "text/plain"
+      },
+      "out": {
+        "file": "VERSION",
+        "type": "text/plain"
+      }
+    },
     "@csmith/release-it-calver-plugin": {
       "format": "YYYY.MM.MICRO"
     },
