--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sid2",
-  "version": "2021.8.2",
+  "version": "0.0.0",
   "description": "sid2 monorepo",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@csmith/release-it-calver-plugin": "^2021.5.7",
+    "@release-it/bumper": "^3.0.1",
     "@release-it/conventional-changelog": "^3.1.0",
     "husky": "^7.0.1",
     "release-it": "^14.11.3"
