fix(build): do not change package.json version, set back to 0.0.0

--- a/.release-it.json
+++ b/.release-it.json
@@ -19,6 +19,7 @@
       "ignoreRecommendedBump": true
     }
   },
+  "npm": false,
   "git": {
     "requireCleanWorkingDir": false,
     "tagName": "${version}"
