fix(build): ensure that multileveled version increments work by stepping-over bug in node-calver

--- a/.release-it.json
+++ b/.release-it.json
@@ -11,7 +11,11 @@
       }
     },
     "./calver-bump-patch.js": {
-      "format": "YYYY.MM.MICRO.MODIFIER"
+      "format": "yyyy.mm.micro.modifier",
+      "branches": {
+        "canary": "calendar.dev",
+        "stable": "calendar.micro"
+      }
     },
     "@release-it/conventional-changelog": {
       "preset": "angular",
