--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sid2",
-  "version": "2021.9.1-dev.2",
+  "version": "0.0.0",
   "description": "sid2 monorepo",
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "release-it --npm.skipChecks=true --no-npm.publish"
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
