--- a/.release-it.json
+++ b/.release-it.json
@@ -13,14 +13,14 @@
     "./calver-bump-patch.js": {
       "format": "yyyy.mm.micro.modifier",
       "branches": {
-        "canary": "calendar.dev",
+        "canary": "calendar.micro.dev",
         "stable": "calendar.micro"
       }
     },
     "@release-it/conventional-changelog": {
       "preset": "angular",
       "infile": "CHANGELOG.md",
-      "ignoreRecommendedBump": true
+      "ignoreRecommendedBump": false
     }
   },
   "npm": false,
