--- a/.release-it.json
+++ b/.release-it.json
@@ -20,7 +20,7 @@
     "@release-it/conventional-changelog": {
       "preset": "angular",
       "infile": "CHANGELOG.md",
-      "ignoreRecommendedBump": false
+      "ignoreRecommendedBump": true
     }
   },
   "npm": false,
