fix(build): fix versioning so canary is always ahead. stable action only strips dev appendix

--- a/.release-it.json
+++ b/.release-it.json
@@ -13,8 +13,8 @@
     "./calver-bump-patch.js": {
       "format": "yyyy.mm.micro.modifier",
       "branches": {
-        "canary": "calendar.micro.dev",
-        "stable": "calendar.micro"
+        "*": "calendar.micro",
+        "canary": "calendar>micro>dev"
       }
     },
     "@release-it/conventional-changelog": {
