--- a/.release-it.json
+++ b/.release-it.json
@@ -1,7 +1,21 @@
 {
   "plugins": {
-    "@csmith/release-it-calver-plugin": {
-      "format": "YYYY.MM.MICRO"
+    "@release-it/bumper": {
+      "in": {
+        "file": "VERSION",
+        "type": "text/plain"
+      },
+      "out": {
+        "file": "VERSION",
+        "type": "text/plain"
+      }
+    },
+    "./calver-bump-patch.js": {
+      "format": "yyyy.mm.micro.modifier",
+      "branches": {
+        "*": "calendar.micro",
+        "canary": "calendar>micro>dev"
+      }
     },
     "@release-it/conventional-changelog": {
       "preset": "angular",
@@ -9,9 +23,10 @@
       "ignoreRecommendedBump": true
     }
   },
+  "npm": false,
   "git": {
     "requireCleanWorkingDir": false,
-    "preRelease": true
+    "tagName": "${version}"
   },
   "github": {
     "release": true,
