--- a/.release-it.json
+++ b/.release-it.json
@@ -13,7 +13,7 @@
     "./calver-bump-patch.js": {
       "format": "yyyy.mm.micro.modifier",
       "branches": {
-        "*": "calendar.micro",
+        "*": "calendar>micro",
         "canary": "calendar>micro>dev"
       }
     },
