--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
       - name: Checkout ${{ github.sha }}
         uses: actions/checkout@v2
-        ref: ${{ github.event.workflow_run.head_branch }}
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
       - name: Creates build
         working-directory: ./dashboard
         run: make release
@@ -33,7 +34,8 @@ jobs:
     steps:
       - name: Checkout ${{ github.sha }}
         uses: actions/checkout@v2
-        ref: ${{ github.event.workflow_run.head_branch }}
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
       - name: Cache local Maven repository
         uses: actions/cache@v2
         with:
@@ -56,8 +58,8 @@ jobs:
     name: Making release
     steps:
       - uses: actions/checkout@v2
-        ref: ${{ github.event.workflow_run.head_branch }}
         with:
+          ref: ${{ github.event.workflow_run.head_branch }}
           fetch-depth: 0
       - name: Read .node_version
         run: echo ::set-output name=NODE_VERSION::$(cat .node-version)
@@ -78,4 +80,5 @@ jobs:
           path: ./target
       - run: npm run release -- --ci
         env:
+          HUSKY: 0
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
