--- a/sid-landing-site/Dockerfile
+++ b/sid-landing-site/Dockerfile
@@ -1,14 +1,15 @@
-FROM node:15 as builder
+ARG NodeVersion
+FROM ${NodeVersion} as builder
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
-COPY yarn.lock ./
-RUN yarn install
+COPY package-lock.json ./
+RUN npm install
 COPY . ./
-RUN yarn build
+RUN npm run build
 
 FROM nginx:stable-alpine
 COPY ./deployment/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["nginx", "-g", "daemon off;"]
