--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,3 +31,11 @@ jobs:
       - name: Build and test
         working-directory: ./keycloak-radius-spi
         run: make ci
+  build-and-test-landing-page:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout ${{ github.sha }}
+        uses: actions/checkout@v2
+      - name: Build and test
+        working-directory: ./sid-landing-site
+        run: make ci
