--- a/sid-landing-site/package.json
+++ b/sid-landing-site/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll",
     "test:ci": "CI=true react-scripts test -w 1",
@@ -12,14 +12,26 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "node-sass": "^5.0.0",
+    "@babel/core": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router": "^5.1.12",
+    "@types/react-router-dom": "^5.1.7",
+    "eslint": "^7.22.0",
+    "node-sass": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "yarn": "^1.22.10"
+    "serverless": "^2.21.1",
+    "stylelint": "^13.13.1",
+    "typescript": "^4.2.3",
+    "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -38,17 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.12",
-    "@types/react-router-dom": "^5.1.7",
-    "serverless": "^2.21.1"
   }
 }
