feat(dashboard): gh #438 Added new flow to create support ticket

--- a/dashboard/application/Gemfile
+++ b/dashboard/application/Gemfile
@@ -68,6 +68,7 @@ gem 'ood_support', '~> 0.0.2'
 gem 'ood_appkit', '~> 1.1'
 gem 'ood_core', '~> 0.11'
 gem 'pbs', '~> 2.2.1'
+gem 'rest-client', '~> 2.0'
 
 # gems to include in ondemand-gems repo for status apps to use
 gem "sinatra", require: false
