--- a/automated-testing/Makefile
+++ b/automated-testing/Makefile
@@ -12,6 +12,7 @@ local remotedev staging-cannon prod-fasse prod-cannon:
 
 test:
 	cd ../dashboard/ && DETACHED=true make
+	docker pull $(DOCKER_CYPRESS_IMAGE)
 	./wait_for_dashboard.sh
 	cp -rf cypress.env.json.local cypress.env.json
 	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless" || :
