--- a/dashboard/application/config/launchers/cannon-rdesktop.yml
+++ b/dashboard/application/config/launchers/cannon-rdesktop.yml
@@ -1,8 +1,8 @@
 ---
-id: "rstudio"
-order: 10
+order: 20
+cluster: "odyssey3"
 form:
-  token: "sys/Rstudio"
+  token: "sys/NativeRD"
   bc_queue: "test"
   bc_account: ""
   bc_num_slots: "1"
@@ -15,14 +15,18 @@ form:
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
+  bc_vnc_resolution: "1024x768"
+  custom_desktop: "1"
+  matlab_version: "NULL"
+  rstudio_version: "rstudio/1.1.453-fasrc01"
   r_version: "R/4.1.0-fasrc01"
   rlibs: "~/apps/R_4.1.0_fasrc01"
-  custom_vanillaconf: "1"
 
 view:
-  logo: "rstudio_logo.png"
-  logoWidth: "200"
+  logo: "desktop_logo.svg"
+  logoWidth: "100"
   style: "margin-top: 10px;"
-  p1: "Run Rstudio Server"
+  p1: "Run FAS-RC Remote Desktop"
   p2: "2 CPU cores and 4GB RAM"
   p3: "8 hours job run time"
+  p4: "Cannon cluster"
