--- a/dashboard/application/config/launchers/fasse-rstudio.yml
+++ b/dashboard/application/config/launchers/fasse-rstudio.yml
@@ -1,24 +1,29 @@
 ---
-order: 15
+order: 10
+cluster: "fasse"
 form:
+  token: "sys/Rstudio"
+  bc_queue: "test"
   bc_account: ""
   bc_num_slots: "1"
   bc_num_hours: "1"
   custom_memory_per_node: "4"
   custom_num_cores: "2"
   custom_num_gpus: "0"
-  custom_time: "06:00:00"
+  custom_time: "08:00:00"
   envscript: ""
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  r_version: "R/4.0.5-fasrc01"
-  rlibs: ""
+  r_version: "R/4.1.0-fasrc01"
+  rlibs: "~/apps/R_4.1.0_fasrc01"
   custom_vanillaconf: "1"
 
 view:
+  logo: "rstudio_logo.png"
   logoWidth: "200"
   style: "margin-top: 10px;"
   p1: "Run Rstudio Server"
   p2: "2 CPU cores and 4GB RAM"
-  p3: "6 hours job run time"
+  p3: "8 hours job run time"
+  p4: "FASSE cluster"
