--- a/dashboard/application/app/views/widgets/config.yml
+++ b/dashboard/application/app/views/widgets/config.yml
@@ -1,4 +1,7 @@
-quick_links:
-  - terminal_button
-  - all_sessions_button
-  - fasse_button
+clusters:
+  - cluster_id: "dev-cluster"
+    links: ["terminal_button", "all_sessions_button", "fasse_button", "cannon_button"]
+  - cluster_id: "odyssey3"
+    links: ["terminal_button", "all_sessions_button", "fasse_button"]
+  - cluster_id: "fasse"
+    links: ["terminal_button", "all_sessions_button", "cannon_button"]
