--- a/dashboard/application/config/launchers/fasse-rdesktop.yml
+++ b/dashboard/application/config/launchers/fasse-rdesktop.yml
@@ -1,7 +1,8 @@
 ---
 order: 20
+cluster: "fasse"
 form:
-  token: "sys/NativeRD"
+  token: "sys/RemoteDesktop"
   bc_queue: "test"
   bc_account: ""
   bc_num_slots: "1"
@@ -16,10 +17,6 @@ form:
   custom_reservation: ""
   bc_vnc_resolution: "1024x768"
   custom_desktop: "1"
-  matlab_version: "NULL"
-  rstudio_version: "rstudio/1.1.453-fasrc01"
-  r_version: "R/4.1.0-fasrc01"
-  rlibs: "~/apps/R_4.1.0_fasrc01"
 
 view:
   logo: "desktop_logo.svg"
@@ -28,3 +25,4 @@ view:
   p1: "Run FAS-RC Remote Desktop"
   p2: "2 CPU cores and 4GB RAM"
   p3: "8 hours job run time"
+  p4: "FASSE cluster"
