feat(testing): gh #452 added fasse target to run tests outside Docker

--- a/automated-testing/Makefile
+++ b/automated-testing/Makefile
@@ -21,3 +21,7 @@ test:
 landing:
 	cp -rf cypress.env.json.$(@) cypress.env.json
 	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*"
+
+fasse:
+	cp -rf cypress.env.json.prod-$(@) cypress.env.json
+	npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*
