feat(dashboard): gh #598 Added support for launcher color configuration to match cluster

--- a/dashboard/application/config/launchers/cannon-jupyter.yml
+++ b/dashboard/application/config/launchers/cannon-jupyter.yml
@@ -19,6 +19,7 @@ form:
   custom_reservation: ""
 
 view:
+  color: "#2D9BF0"
   logo: "jupyter_logo.svg"
   logoWidth: "85"
   style: "margin-top: -5px;"
