--- a/dashboard/application/config/launchers/cannon-rstudio.yml
+++ b/dashboard/application/config/launchers/cannon-rstudio.yml
@@ -20,6 +20,7 @@ form:
   custom_vanillaconf: "1"
 
 view:
+  color: "#2D9BF0"
   logo: "rstudio_logo.png"
   logoWidth: "200"
   style: "margin-top: 10px;"
