--- a/dashboard/application/config/launchers/fasse-sas.yml
+++ b/dashboard/application/config/launchers/fasse-sas.yml
@@ -18,6 +18,7 @@ form:
   bc_vnc_resolution: "1024x768"
 
 view:
+  color: "#DA6027"
   logo: "sas_logo.png"
   logoWidth: "180"
   style: "margin-top: 13px"
