--- a/dashboard/application/config/launchers/fasse-stata.yml
+++ b/dashboard/application/config/launchers/fasse-stata.yml
@@ -19,6 +19,7 @@ form:
   stata_version: "stata/16.0-fasrc01"
 
 view:
+  color: "#DA6027"
   logo: "stata_logo.svg"
   logoWidth: "200"
   style: "margin-top: 20px;"
