#598 and #602 - Added custom launchers, quick links, and banner per HPC cluster (#35)
* feat(dashboard): gh #598 Added custom launchers and quick links per HPC cluster

* Update README.md

the Sid Dashboard is now expected to be working

* Update README.md

Note that launching apps in the default dashboard is currently broken in Local Development environments.

* fix(build): gh #598 fixed OOD dashboard session cookie creation for HTTP

* feat(dashboard): gh #598 Added support for launcher color configuration to match cluster

* feat(dashboard): gh #602 Added cluster banner + updated look and feel for delete button

* chore(dashboard): GH #598 document launcher view.color param

* fix(build): gh #598 fixed banner configuration after branch merge

* chore(dashboard): GH #602 fix typo in Cannon cluster banner message

Co-authored-by: William Horka <whorka@hmdc.harvard.edu>

--- a/dashboard/application/app/views/widgets/config.yml
+++ b/dashboard/application/app/views/widgets/config.yml
@@ -1,4 +1,10 @@
-quick_links:
-  - terminal_button
-  - all_sessions_button
-  - fasse_button
+clusters:
+  - cluster_id: "dev-cluster"
+    links: ["terminal_button", "all_sessions_button", "fasse_button", "cannon_button"]
+    welcome_message: "welcome_message"
+  - cluster_id: "odyssey3"
+    links: ["terminal_button", "all_sessions_button", "fasse_button"]
+    welcome_message: "cannon_welcome_message"
+  - cluster_id: "fasse"
+    links: ["terminal_button", "all_sessions_button", "cannon_button"]
+    welcome_message: "fasse_welcome_message"
