--- a/dashboard/application/config/launchers/cannon-matlab.yml
+++ b/dashboard/application/config/launchers/cannon-matlab.yml
@@ -1,7 +1,8 @@
 ---
-order: 30
+order: 60
+cluster: "odyssey3"
 form:
-  token: "sys/Jupyter"
+  token: "sys/Matlab"
   bc_queue: "test"
   bc_account: ""
   bc_num_slots: "1"
@@ -10,17 +11,18 @@ form:
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
-  modules: ""
-  jupyterlab_switch: "1"
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
+  bc_vnc_resolution: "1024x768"
+  matlab_version: "matlab/R2021a-fasrc01"
 
 view:
-  logo: "jupyter_logo.svg"
-  logoWidth: "85"
-  style: "margin-top: -5px;"
-  p1: "Run Jupyter notebook / Jupyterlab"
+  color: "#2D9BF0"
+  logo: "matlab_logo.png"
+  logoWidth: "230"
+  style: "margin-top: -15px;"
+  p1: "Run Matlab"
   p2: "1 CPU core and 8GB RAM"
   p3: "8 hours job run time"
+  p4: "Cannon cluster"
